k8s/deployment_mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: mysql-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        args:
          - "--ignore-db-dir=lost+found"
        name: mysql
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
        - name: data-mysql
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-config
        - name: data-mysql
          persistentVolumeClaim:
            claimName: pvc-mysql
